Fix 'Track Your Progress' div position on mobile.

--- a/css/carbonCalc.css
+++ b/css/carbonCalc.css
@@ -7,13 +7,23 @@
     left: 0;
 }
 .panel-login {
+  display: inline-block;
+
+}
+.login-container {
   position: relative;
-  width: 30em;
-  height: 22em;
-  top: 29%;
-  margin-left: auto;
-  margin-right: auto;
+  top: 35%;
+  text-align: center;
 }
 .hidden {
   display: none;
+}
+
+/* For Smartphones */
+@media all and (min-width:1px) and (max-width: 800px) {
+  .login-container {
+    position: relative;
+    top: 100px;
+    text-align: center;
+  }
 }
